--- a/app/src/main/res/layout/activity_final_check.xml
+++ b/app/src/main/res/layout/activity_final_check.xml
@@ -73,8 +73,8 @@
                 android:layout_below="@+id/lastName"
                 android:layout_marginTop="50dp"
                 android:text="  3"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Address"
@@ -83,8 +83,8 @@
                 android:layout_below="@+id/DOB"
                 android:layout_marginTop="50dp"
                 android:text="  4"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/license"
@@ -93,8 +93,8 @@
                 android:layout_below="@+id/Address"
                 android:layout_marginTop="50dp"
                 android:text="  5"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/insProvider"
@@ -103,8 +103,8 @@
                 android:layout_below="@+id/license"
                 android:layout_marginTop="50dp"
                 android:text="  6"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
 
             <TextView
@@ -114,8 +114,8 @@
                 android:layout_below="@+id/insProvider"
                 android:layout_marginTop="50dp"
                 android:text="  7"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/insPolicyHolder"
@@ -124,8 +124,8 @@
                 android:layout_below="@+id/insPolicyNum"
                 android:layout_marginTop="50dp"
                 android:text="  8"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Make"
@@ -134,8 +134,8 @@
                 android:layout_below="@+id/insPolicyHolder"
                 android:layout_marginTop="50dp"
                 android:text="  9"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Year"
@@ -144,8 +144,8 @@
                 android:layout_below="@+id/Make"
                 android:layout_marginTop="50dp"
                 android:text="  10"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Plate"
@@ -154,8 +154,8 @@
                 android:layout_below="@+id/Year"
                 android:layout_marginTop="50dp"
                 android:text="  11"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/vehicleState"
@@ -164,8 +164,8 @@
                 android:layout_below="@+id/Plate"
                 android:layout_marginTop="50dp"
                 android:text="  12"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/Type"
@@ -174,8 +174,8 @@
                 android:layout_below="@+id/vehicleState"
                 android:layout_marginTop="50dp"
                 android:text="  13"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/reportNameTv"
@@ -184,18 +184,174 @@
                 android:layout_below="@+id/Type"
                 android:layout_marginTop="50dp"
                 android:text="  Enter Report Name"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-1076dp"
+                android:layout_marginEnd="4dp"
+                android:text="First Name"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-994dp"
+                android:layout_marginEnd="2dp"
+                android:text="Last Name"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-908dp"
+                android:layout_marginEnd="1dp"
+                android:text="Date of Birth"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-826dp"
+                android:layout_marginEnd="1dp"
+                android:text="Address"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-744dp"
+                android:layout_marginEnd="5dp"
+                android:text="License"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-497dp"
+                android:layout_marginEnd="5dp"
+                android:text="Insurance Policy Holder"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-407dp"
+                android:layout_marginEnd="5dp"
+                android:text="Vehicle Make"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-323dp"
+                android:layout_marginEnd="1dp"
+                android:text="Vehicle Year"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-244dp"
+                android:layout_marginEnd="-3dp"
+                android:text="Vehicle Plate Number"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-159dp"
+                android:layout_marginEnd="-2dp"
+                android:text="State Registered"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-75dp"
+                android:layout_marginEnd="-2dp"
+                android:text="Vehicle Type"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-658dp"
+                android:layout_marginEnd="5dp"
+                android:text="Insurance Provider"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/reportNameTv8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/Type"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-578dp"
+                android:layout_marginEnd="5dp"
+                android:text="Insurance Policy Number"
+                android:textColor="#FFD700"
+                android:textSize="25sp" />
 
             <EditText
                 android:id="@+id/ReportName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/reportNameTv"
-                android:paddingTop="10dp"
                 android:hint="  Type Name"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"/>
+                android:paddingTop="10dp"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
 
 
         </RelativeLayout>
@@ -207,14 +363,12 @@
 
             <Button
                 android:id="@+id/submitInfoToFirebase"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="205dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="50dp"
-                android:text=" NEXT"
-                android:layout_centerHorizontal="true"/>
-
-
+                android:text="Finish" />
 
 
         </RelativeLayout>
