--- a/app/src/main/res/layout/activity_insurance_registration.xml
+++ b/app/src/main/res/layout/activity_insurance_registration.xml
@@ -62,7 +62,7 @@
                         android:autofillHints="emailAddress"
                         android:background="@drawable/rounded_corners"
                         android:ems="10"
-                        android:hint="Plate Number"
+                        android:hint="Policy Holder"
                         android:inputType="textEmailAddress"
                         android:paddingLeft="10dp"
                         android:textColorHint="@color/gray"
@@ -80,7 +80,7 @@
                         android:autofillHints="emailAddress"
                         android:background="@drawable/rounded_corners"
                         android:ems="10"
-                        android:hint="Vehicle Year"
+                        android:hint="Policy Number"
                         android:inputType="textEmailAddress"
                         android:paddingLeft="10dp"
                         android:textColorHint="@color/gray"
