--- a/app/src/main/res/layout/activity_handbook.xml
+++ b/app/src/main/res/layout/activity_handbook.xml
@@ -8,79 +8,16 @@
     tools:context=".Handbook">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view5"
-        android:layout_width="172dp"
-        android:layout_height="201dp"
+        android:id="@+id/card_view7"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:layout_gravity="center"
-        android:layout_marginTop="440dp"
-        android:layout_marginEnd="21dp"
-        app:cardCornerRadius="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="Go">
-
-
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view7"
-            android:layout_width="172dp"
-            android:layout_height="201dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="440dp"
-            android:layout_marginEnd="21dp"
-            android:onClick="Go"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/car">
-
-                <TextView
-                    android:id="@+id/textView19"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="50sp"
-                    android:text="Safety Tips"
-                    android:textSize="15sp" />
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/car">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="50sp"
-                android:text="Safety Tips"
-                android:textSize="15sp" />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view3"
-        android:layout_width="172dp"
-        android:layout_height="201dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="216dp"
-        android:layout_marginEnd="215dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="4dp"
+        android:onClick="Go"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -88,51 +25,27 @@
             android:background="@drawable/practices">
 
             <TextView
-                android:id="@+id/textView20"
+                android:id="@+id/textView25"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="50sp"
-                android:text="Best Practices"
-                android:textSize="16sp" />
+                android:paddingStart="170sp"
+                android:text="Safety Tips"
+                android:textSize="15sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view4"
-        android:layout_width="172dp"
-        android:layout_height="201dp"
+        android:id="@+id/card_view5"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:layout_gravity="center"
-        android:layout_marginTop="216dp"
-        android:layout_marginEnd="21dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="4dp"
+        android:onClick="Go"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view0"
-            android:layout_width="172dp"
-            android:layout_height="201dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="216dp"
-            android:layout_marginEnd="21dp"
-            app:cardCornerRadius="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/carprevention">
-
-                <TextView
-                    android:id="@+id/textView21"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="50sp"
-                    android:text="  Accident Prevention"
-                    android:textSize="16sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -140,67 +53,96 @@
             android:background="@drawable/carprevention">
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/textView23"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="50sp"
-                android:text="  Accident Prevention"
-                android:textSize="16sp" />
+                android:paddingStart="150sp"
+                android:text="Accident Prevention"
+                android:textSize="15sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view2"
-        android:layout_width="172dp"
-        android:layout_height="201dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="440dp"
-        android:layout_marginEnd="215dp"
-        app:cardCornerRadius="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
         android:id="@+id/card_view9"
-        android:layout_width="172dp"
-        android:layout_height="201dp"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:layout_gravity="center"
-        android:layout_marginTop="440dp"
-        android:layout_marginEnd="215dp"
+        android:layout_marginTop="556dp"
+        android:layout_marginEnd="4dp"
+        android:onClick="Go"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/insurance">
 
             <TextView
-                android:id="@+id/textView0"
+                android:id="@+id/textView22"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="50sp"
+                android:paddingStart="170sp"
                 android:text="Insurance"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view8"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="408dp"
+        android:layout_marginEnd="4dp"
+        android:onClick="Go"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/car">
+
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="170sp"
+                android:text="Best Practices"
+                android:textSize="15sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/title2"
-        android:layout_width="match_parent"
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="136dp"
         android:text="Handbook"
-        android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintHorizontal_bias="0.992"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="88dp"
+        android:text="Choose a topic below to learn more"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.988"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
