--- a/app/src/main/res/layout/activity_step3.xml
+++ b/app/src/main/res/layout/activity_step3.xml
@@ -9,12 +9,13 @@
 
 
     <Button
-        android:id="@+id/emergencyContact_btn2"
+        android:id="@+id/infoexchangego"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="604dp"
         android:layout_marginEnd="139dp"
         android:backgroundTint="@color/logo"
+        android:onClick="infoexchangegoto"
         android:text="Information\nExchange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.992"
@@ -62,16 +63,16 @@
 
     <TextView
         android:id="@+id/textView18"
-        android:layout_width="326dp"
-        android:layout_height="100dp"
+        android:layout_width="328dp"
+        android:layout_height="134dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="192dp"
         android:layout_marginEnd="32dp"
-        android:text="This step will have you enter in the other driver's information that you got into an accident with"
+        android:text="This step will have you enter in the other driver's information that you got into an accident with, and you have the option to import yours from your profile."
         android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,15 +126,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="139dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="131dp"
         android:text="Step 3"
         android:textColor="@color/white"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.922"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
